--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ h6 {font-size:1em;color:#ffaa00}
 	text-align: center;
 	font-size: 0.91em;
 	width: 50px;
-	padding-top: 250px;
+	padding-top: 25px;
 	color: f2f2f2;
 }
 .modalDialog .button{
@@ -371,8 +371,8 @@ footer .nav li {
 	border-right: solid #f2f2f2 1px;
 }
 footer .nav li:last-child{
-	border-right: none:
+	border-right: none;
 }
-
-
-
+.fleft{
+	padding-left: 43%;
+}
